# DLC2Kinematics

./: .gitignore  CODE_OF_CONDUCT.md  DEMO.ipynb  DEMO_c3d.ipynb  LICENSE  README.md  license.md  pyproject.toml  reinstall.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: greetings.yml  python-package.yml  test_and_deploy.yml
dlc2kinematics/: __init__.py  mainfxns.py  plotting.py  preprocess.py  quaternions.py  version.py  visualization.py
dlc2kinematics/utils/: __init__.py  auxiliaryfunctions.py
docs/: .gitignore  CLAC.txt  CLAI.txt  CONTRIBUTING.md  conf.py
docs/scripts/: autodoc.sh  module.sh
examples/: config.yaml  reachingDEMO_2D.h5  reachingDEMO_3D.h5  runway03.c3d
kinematik/: __init__.py  version.py
src/dlc2kinematics/: __init__.py  _version.py  joint_analysis.py  preprocess_c3d.py  version.py
src/dlc2kinematics/utils/: auxiliaryfunctions.py
